# Pattern-Searching

./: CMakeLists.txt  DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  PatternSearching.cpp  PatternSearching.h  RE.cpp  RE.h  README.md  TFA.cpp  TFA.h  contract.h  dfa.json  enfa.json  helper.cpp  helper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  presentationGUI.pptx  test.txt  testMain.cpp  tfa.json  utils.cpp  utils.h
outputs/: dfa-output.json  enfa-output.json  mindfa.json  regex.txt
test/: DFAtest.h  ENFAtest.h  REtest.cpp  REtest.h  outputTest.h  testPatternSearching.h  testPatternSearchingOutput.h
testOutput/: outputTest1.txt  outputTest2.txt  outputTest3.txt  outputTest4.txt  outputTest5.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
